@@ -1,5 +1,5 @@
 ===========================================================================
-$NetBSD$
+$NetBSD: MESSAGE,v 1.1.1.1 2004/12/29 12:58:26 jmmv Exp $
 
 You might want to install the libgail-gnome package for better gnome
 accessibility support.
