@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.7 2006/03/06 00:18:15 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2006/03/11 22:05:02 jmmv Exp $
 
-.include "../../devel/glade2/Makefile.common"
+.include "../../devel/glade/Makefile.common"
 
-PKGNAME=	${DISTNAME:S/glade/glade2-gnome/}
+PKGNAME=	${DISTNAME:S/glade/glade-gnome/}
 CATEGORIES+=	gnome
 
 COMMENT+=	and GNOME2
 
-CONFLICTS+=	glade2-[0-9]*
+CONFLICTS+=	glade-[0-9]*
 
 #.include "../../databases/libgda/buildlink3.mk"
 #.include "../../databases/libgnomedb/buildlink3.mk"
