@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.7 2005/05/13 15:19:27 drochner Exp $
+$NetBSD: distinfo,v 1.8 2006/03/11 22:05:02 jmmv Exp $
 
 SHA1 (glade-2.12.1.tar.bz2) = 19b0152da79c4ff24b5d5277370ffc3bda8ee07a
 RMD160 (glade-2.12.1.tar.bz2) = 302d729c207904063f01b89312181534fff44574
